--- a/src/css/profiles.css
+++ b/src/css/profiles.css
@@ -30,3 +30,28 @@ h1{
     font-weight: 770;
     color: white;
 }
+
+
+.add-availabiity{
+
+    display: flex;
+    padding: 20px 30px
+}
+
+.center-btn {
+    text-decoration: none;
+    color: white;
+    opacity: 0.7;
+    border: 2px solid rgba(255, 255, 255, 0.7);
+    padding: 10px 20px;
+    border-radius: 10px 30px;
+    transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out, border-radius 0.2s ease-in-out; /* Apply transition to properties changing on hover */
+}
+
+.center-btn:hover {
+    text-decoration: none;
+    color: white;
+    opacity: 1; /* Change opacity on hover */
+    transform: scale(1.1); /* Scale on hover */
+    border-radius: 30px 10px; /* Change border radius on hover */
+}
